examples/stress-test/errors/bad-type.mds
---
not_an_array: "just a string"
---

@for item in not_an_array:
- {item}
@end
